[gd_scene load_steps=7 format=3 uid="uid://qllw88lr10ht"]

[ext_resource type="Script" path="res://goat_man/goat_man.gd" id="1_q72k3"]
[ext_resource type="AudioStream" uid="uid://sodfeqga7f4u" path="res://assests/sounds/goat_run-002.mp3" id="2_kx041"]
[ext_resource type="AudioStream" uid="uid://bhra25kygejam" path="res://assests/sounds/goat_dead.mp3" id="3_bwg16"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ppe2j"]
size = Vector3(4, 4, 4)

[sub_resource type="BoxMesh" id="BoxMesh_4hody"]
size = Vector3(4, 4, 4)

[sub_resource type="BoxMesh" id="BoxMesh_jmw0y"]

[node name="GoatMan" type="Area3D" groups=["goat"]]
script = ExtResource("1_q72k3")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
shape = SubResource("BoxShape3D_ppe2j")

[node name="TestGoatMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
mesh = SubResource("BoxMesh_4hody")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.86008, 2.46564)
mesh = SubResource("BoxMesh_jmw0y")

[node name="RayCastForward" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.63611, 0)
target_position = Vector3(0, 0, 2.5)

[node name="RayCastRight" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.63611, 0)
target_position = Vector3(3, 0, 0)

[node name="RayCastLeft" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.63611, 0)
target_position = Vector3(-3, 0, 0)

[node name="GoatRunNoise" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_kx041")
attenuation_model = 1
autoplay = true
doppler_tracking = 1

[node name="GoatDeadNoise" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_bwg16")
volume_db = 12.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
